--- a/CommentGenerator/MainWindow.xaml
+++ b/CommentGenerator/MainWindow.xaml
@@ -11,8 +11,8 @@
             <ColumnDefinition Width="215*"/>
             <ColumnDefinition Width="49*"/>
         </Grid.ColumnDefinitions>
-        <Button Content="Preview" HorizontalAlignment="Left" Margin="35,65,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Height="20"/>
-        <Button Content="Copy" HorizontalAlignment="Left" Margin="35,103,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Height="20" RenderTransformOrigin="-0.947,-1.7"/>
+        <Button x:Name="Btn_Preview" Content="Preview" HorizontalAlignment="Left" Margin="35,65,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Height="20" Click="Btn_Preview_Click"/>
+        <Button x:Name="Btn_Copy" Content="Copy" HorizontalAlignment="Left" Margin="35,103,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Height="20" RenderTransformOrigin="-0.947,-1.7" Click="Btn_Copy_Click"/>
         <Button x:Name="Btn_Clear" Content="Clear" Grid.Column="1" HorizontalAlignment="Left" Margin="35,140,0,0" VerticalAlignment="Top" Width="75" Height="20" Click="Btn_Clear_Button_Click"/>
         <TextBox x:Name="Tb_InputBox" HorizontalAlignment="Left" Height="180" Margin="10,10,0,0" TextWrapping="NoWrap" Text="" VerticalAlignment="Top" Width="625" HorizontalScrollBarVisibility="Visible"
                  VerticalScrollBarVisibility="Visible" AcceptsReturn="True"/>
