--- a/CommentGenerator/MainWindow.xaml
+++ b/CommentGenerator/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CommentGenerator"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Comment Generator" Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="215*"/>
@@ -15,9 +15,9 @@
         <Button x:Name="Btn_Copy" Content="Copy" HorizontalAlignment="Left" Margin="35,103,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Height="20" RenderTransformOrigin="-0.947,-1.7" Click="Btn_Copy_Click"/>
         <Button x:Name="Btn_Clear" Content="Clear" Grid.Column="1" HorizontalAlignment="Left" Margin="35,140,0,0" VerticalAlignment="Top" Width="75" Height="20" Click="Btn_Clear_Button_Click"/>
         <TextBox x:Name="Tb_InputBox" HorizontalAlignment="Left" Height="180" Margin="10,10,0,0" TextWrapping="NoWrap" Text="" VerticalAlignment="Top" Width="625" HorizontalScrollBarVisibility="Visible"
-                 VerticalScrollBarVisibility="Visible" AcceptsReturn="True"/>
+                 VerticalScrollBarVisibility="Visible" AcceptsReturn="True" FontFamily="Courier New"/>
         <TextBox x:Name="Tb_OutputBox" HorizontalAlignment="Left" Height="180" Margin="10,210,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="625" IsReadOnly="True"
-                 HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible"/>
+                 HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible" FontFamily="Courier New"/>
 
     </Grid>
 </Window>
