--- a/CommentGenerator/MainWindow.xaml
+++ b/CommentGenerator/MainWindow.xaml
@@ -8,16 +8,21 @@
         Title="Comment Generator" Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="215*"/>
-            <ColumnDefinition Width="49*"/>
+            <ColumnDefinition Width="277*"/>
+            <ColumnDefinition Width="119*"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="Btn_Preview" Content="Preview" HorizontalAlignment="Left" Margin="35,65,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Height="20" Click="Btn_Preview_Click"/>
-        <Button x:Name="Btn_Copy" Content="Copy" HorizontalAlignment="Left" Margin="35,103,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Height="20" RenderTransformOrigin="-0.947,-1.7" Click="Btn_Copy_Click"/>
-        <Button x:Name="Btn_Clear" Content="Clear" Grid.Column="1" HorizontalAlignment="Left" Margin="35,140,0,0" VerticalAlignment="Top" Width="75" Height="20" Click="Btn_Clear_Button_Click"/>
-        <TextBox x:Name="Tb_InputBox" HorizontalAlignment="Left" Height="180" Margin="10,10,0,0" TextWrapping="NoWrap" Text="" VerticalAlignment="Top" Width="625" HorizontalScrollBarVisibility="Visible"
+        <Button x:Name="Btn_Preview" Content="Preview" HorizontalAlignment="Left" Margin="19,10,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Height="20" Click="Btn_Preview_Click"/>
+        <Button x:Name="Btn_Copy" Content="Copy" HorizontalAlignment="Left" Margin="19,45,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Height="20" RenderTransformOrigin="-0.947,-1.7" Click="Btn_Copy_Click"/>
+        <Button x:Name="Btn_Clear" Content="Clear" Grid.Column="1" Margin="19,81,144,0" VerticalAlignment="Top" Height="20" Click="Btn_Clear_Button_Click"/>
+        <TextBox x:Name="Tb_InputBox" Height="180" Margin="10,10,10,0" TextWrapping="NoWrap" Text="" VerticalAlignment="Top" HorizontalScrollBarVisibility="Visible"
                  VerticalScrollBarVisibility="Visible" AcceptsReturn="True" FontFamily="Courier New"/>
-        <TextBox x:Name="Tb_OutputBox" HorizontalAlignment="Left" Height="180" Margin="10,210,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="625" IsReadOnly="True"
+        <TextBox x:Name="Tb_OutputBox" Height="180" Margin="10,210,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True"
                  HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible" FontFamily="Courier New"/>
+        <TextBox x:Name="Tb_TypePreview" Grid.Column="1" Height="180" Margin="10,210,10,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
+        <ComboBox x:Name="Cb_Type" Grid.Column="1" Margin="19,132,99,0" VerticalAlignment="Top">
+            <ComboBoxItem IsSelected="True" Content="Type1"/>
+            <ComboBoxItem Content="Type2"/>
+        </ComboBox>
 
     </Grid>
 </Window>
