--- a/CommentGenerator/MainWindow.xaml
+++ b/CommentGenerator/MainWindow.xaml
@@ -22,6 +22,7 @@
         <ComboBox x:Name="Cb_Type" Grid.Column="1" Margin="19,132,99,0" VerticalAlignment="Top">
             <ComboBoxItem IsSelected="True" Content="Type1"/>
             <ComboBoxItem Content="Type2"/>
+            <ComboBoxItem Content="Type3"/>
         </ComboBox>
 
     </Grid>
