--- a/CommentGenerator/MainWindow.xaml
+++ b/CommentGenerator/MainWindow.xaml
@@ -14,6 +14,7 @@
         <Button x:Name="Btn_Preview" Content="Preview" HorizontalAlignment="Left" Margin="19,10,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Height="20" Click="Btn_Preview_Click"/>
         <Button x:Name="Btn_Copy" Content="Copy" HorizontalAlignment="Left" Margin="19,45,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Height="20" RenderTransformOrigin="-0.947,-1.7" Click="Btn_Copy_Click"/>
         <Button x:Name="Btn_Clear" Content="Clear" Grid.Column="1" Margin="19,81,144,0" VerticalAlignment="Top" Height="20" Click="Btn_Clear_Button_Click"/>
+        <Button x:Name="Btn_Test" Content="Test" Grid.Column="1" HorizontalAlignment="Left" Margin="143,45,0,0" VerticalAlignment="Top" Width="75" Click="Btn_Test_Click"/>
         <TextBox x:Name="Tb_InputBox" Height="180" Margin="10,10,10,0" TextWrapping="NoWrap" Text="" VerticalAlignment="Top" HorizontalScrollBarVisibility="Visible"
                  VerticalScrollBarVisibility="Visible" AcceptsReturn="True" FontFamily="Courier New"/>
         <TextBox x:Name="Tb_OutputBox" Height="180" Margin="10,210,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True"
@@ -24,6 +25,7 @@
             <ComboBoxItem Content="Type2"/>
             <ComboBoxItem Content="Type3"/>
         </ComboBox>
+        
 
     </Grid>
 </Window>
